[gd_scene load_steps=10 format=2]

[ext_resource path="res://GUI/ChallengeDialog.gd" type="Script" id=1]
[ext_resource path="res://GUI/ninePatchRect1.png" type="Texture" id=2]
[ext_resource path="res://fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/handwriting/Caveat/Caveat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/architect-s-daughter/ArchitectsDaughter32.tres" type="DynamicFont" id=5]
[ext_resource path="res://GUI/TimerCountdown.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]

size = 32
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 32
extra_spacing_char = 2
font_data = ExtResource( 4 )

[node name="ChallengeDialog" type="Node2D"]
script = ExtResource( 1 )

[node name="Instructions" type="NinePatchRect" parent="."]
margin_left = 130.0
margin_top = 20.0
margin_right = 980.0
margin_bottom = 560.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 147, 147 )
patch_margin_left = 15
patch_margin_top = 132
patch_margin_right = 15
patch_margin_bottom = 135

[node name="ReturnButton" type="Button" parent="Instructions"]
margin_left = 410.0
margin_top = 440.0
margin_right = 530.0
margin_bottom = 488.0
text = "Return"

[node name="StartButton" type="Button" parent="Instructions"]
margin_left = 586.0
margin_top = 440.0
margin_right = 706.0
margin_bottom = 490.0
text = "Start"

[node name="Description" type="RichTextLabel" parent="Instructions"]
margin_left = 20.0
margin_top = 28.0
margin_right = 830.0
margin_bottom = 420.0
theme = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "time challenge"
text = "time challenge"

[node name="CountdownPanel" type="Panel" parent="."]
margin_left = 880.0
margin_top = 10.0
margin_right = 1005.0
margin_bottom = 135.0
__meta__ = {
"_edit_group_": true
}

[node name="CountdownLabel" type="Label" parent="CountdownPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0901961, 0.313726, 0.054902, 1 )
text = "99"
script = ExtResource( 6 )

[node name="ChallengeTimer" type="Timer" parent="CountdownPanel"]
wait_time = 90.0
one_shot = true

